# tetra-os

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPY_FILES.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tetra_complete_package.py  tetra_extended_experiments.py  tetra_first_test.py  tetra_meta_discovery.py  tetra_os_improved.py  tetra_science_module.py  tetra_web_dashboard.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: README.md  generate_demo_gif.py
deployment/: Dockerfile  docker-compose.yml
experiments/: __init__.py  run_all.py
notebooks/: 01_quickstart.ipynb
test_results/: report_20260622_133925.json
tests/: test_base.py  test_meta.py  test_science.py
tetra_os/: __init__.py  __main__.py
tetra_os/api/: dashboard.py  server.py
tetra_os/core/: algorithms.py  benchmarks.py  consciousness.py  orchestrator.py
tetra_os/meta/: algorithm_gen.py  law_discovery.py  meta_learning.py  pattern_detector.py
tetra_os/science/: drug_design.py  energy.py  materials.py
