[build-system]
requires = ['setuptools>=61', 'wheel']
build-backend = 'setuptools.backends.legacy:build'

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = '--cov=tetra_os --cov-report=term-missing'
